--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2211,7 +2211,7 @@ input, select, textarea {
 			}
 
 		#header h1 {
-			color: #fff;
+			color: rgb(153, 13, 158);
 			font-size: 3em;
 			line-height: 1em;
 		}
