--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2215,7 +2215,7 @@ input, select, textarea {
 			font-size: 3em;
 			line-height: 1em;
 			box-shadow: #483949;
-			box-sizing: border-box;
+			box-sizing: ;
 		}
 
 			#header h1 a {
@@ -2676,6 +2676,8 @@ input, select, textarea {
 				#header .inner {
 					padding-left: 2em;
 					padding-right: 2em;
+					border: 2px purple;
+					border-style: groove;
 				}
 
 		/* Banner */
