--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,7 +116,7 @@ input, select, textarea {
 	}
 
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-		color: inherit;
+		color: #A855F7;
 		text-decoration: none;
 		border-bottom-color: transparent;
 	}
@@ -158,7 +158,7 @@ input, select, textarea {
 	}
 
 		a:hover {
-			color: #ef8376;
+			color: #D946EF;
 			border-bottom-color: transparent;
 		}
 
@@ -1971,8 +1971,8 @@ input, select, textarea {
 		form input[type="password"]:focus,
 		form select:focus,
 		form textarea:focus {
-			background: #fff;
-			border-color: #df7366;
+			background:#F3E8FF;
+			border-color: #C084FC;
 		}
 
 	form input[type="text"],
@@ -2055,8 +2055,8 @@ input, select, textarea {
 	.button {
 		position: relative;
 		display: inline-block;
-		background: #bd0de0;
-		color: #fff;
+		background: #A855F7;
+		color: #F3E8FF;
 		text-align: center;
 		border-radius: 0.5em;
 		text-decoration: none;
@@ -2076,8 +2076,8 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			color: #fff;
-			background: #ef8376;
+			color:#F3E8FF;
+			background: #C084FC;
 		}
 
 		input[type="button"].alt,
@@ -2147,7 +2147,7 @@ input, select, textarea {
 			position: relative;
 			display: inline-block;
 			background: #2b252c;
-			color: #fff;
+			color: #F3E8FF;
 			border-radius: 100%;
 			width: 3em;
 			height: 3em;
@@ -2163,7 +2163,7 @@ input, select, textarea {
 /* Wrapper */
 
 	.wrapper {
-		background: #fff;
+		background:#F3E8FF;
 		margin: 0 0 2em 0;
 		padding: 6em 0 6em 0;
 	}
@@ -2180,7 +2180,7 @@ input, select, textarea {
 		background-size: cover;
 		background-position: center center;
 		background-attachment: fixed;
-		color: #fff;
+		color: #F3E8FF;
 		text-align: center;
 		padding: 7.5em 0 2em 0;
 		cursor: default;
@@ -2209,16 +2209,16 @@ input, select, textarea {
 				font-size: 1.25em;
 				margin: 0;
 				padding: 10px;
-				background: rgba(149, 13, 167, 0.73);
+				background: rgba(192, 132, 252, 0.75);
 				border-radius: 20px;
 			}
 
 		#header h1 {
-			color: #fff;
+			color: #F3E8FF;
 			font-size: 3em;
 			line-height: 1em;
 			padding: 10px;
-			background: rgba(149, 13, 167, 0.73);
+			background: rgba(192, 132, 252, 0.75);
 			border-radius: 20px;
 			min-width: 1px;
 
@@ -2262,7 +2262,7 @@ input, select, textarea {
 
 		body.homepage #header h1 {
 			font-size: 4em;
-			background:  rgba(149, 13, 167, 0.73);
+			background:  rgba(192, 132, 252, 0.75);
 			min-width: 1px;
 			width: auto;
 		}
@@ -2420,7 +2420,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background: #fff;
+		background:#F3E8FF;
 		text-align: center;
 		padding: 4.5em 0 4.5em 0;
 		margin-bottom: 0;
@@ -2473,11 +2473,11 @@ input, select, textarea {
 		overflow: hidden;
 		padding: 6em 0 6em 0;
 		background: #2b252c;
-		color: #fff;
+		color: #F3E8FF;
 	}
 
 		#footer .icon.circled {
-			background: #fff;
+			background: #F3E8FF;
 			color: #2b252c;
 		}
 
@@ -2487,7 +2487,7 @@ input, select, textarea {
 		}
 
 		#footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
-			color: #fff;
+			color: #F3E8FF;
 		}
 
 		#footer .contact {
@@ -2521,7 +2521,7 @@ input, select, textarea {
 		overflow: hidden;
 		padding: 2em 0 2em 0;
 		margin-bottom: 40px;
-		background-color: #7F00FF;
+		background-color: #7E22CE;
 	}
 		.carousel #title-header{
 			text-align: center;
@@ -2530,7 +2530,7 @@ input, select, textarea {
 		}
 
 		.carousel #title-text{
-			color: #fff;
+			color: #F3E8FF;
 		}
 
 		.carousel .forward, .carousel .backward {
@@ -2571,7 +2571,7 @@ input, select, textarea {
 			}
 
 			.carousel .forward:hover:before, .carousel .backward:hover:before {
-				background-color: rgba(201, 37, 223, 0.75);
+				background-color: rgba(168, 85, 247, 0.75);
 			}
 
 		.carousel .forward {
@@ -2612,7 +2612,7 @@ input, select, textarea {
 		.carousel article {
 			display: inline-block;
 			width: 18em;
-			background: #fff;
+			background: #F3E8FF;
 			text-align: center;
 			padding: 0 1em 3em 1em;
 			margin: 0 2em 2em 0;
@@ -2936,7 +2936,7 @@ input, select, textarea {
 						text-decoration: none;
 						font-style: normal;
 						content: '\f0c9';
-						color: #fff;
+						color:#F3E8FF;
 						color: rgba(255, 255, 255, 0.75);
 						text-align: center;
 						display: block;
@@ -3006,7 +3006,7 @@ input, select, textarea {
 					}
 
 					#navPanel .link.depth-0 {
-						color: #fff;
+						color: #F3E8FF;
 						font-weight: 600;
 					}
 
@@ -3036,7 +3036,7 @@ input, select, textarea {
 				}
 
 				#navPanel .depth-0 {
-					color: #fff;
+					color: #F3E8FF;
 				}
 
 			body.navPanel-visible #page-wrapper {
@@ -3085,7 +3085,7 @@ input, select, textarea {
 
 				#header h1 {
 					font-size: 1.75em;
-					background:  rgba(149, 13, 167, 0.73);
+					background:  rgba(192, 132, 252, 0.75);
 					min-width: 1px;
 					width: auto;
 				}
