--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3172,13 +3172,13 @@ input, select, textarea {
 		color: white;
 		background-color: #7E22CE;
 		text-align: center;
-		font-size: 16px;
-		margin: 4px 2px;
+		font-size: 24px;
+		margin: auto;
 		-webkit-transition-duration: 0.4s; /* Safari */
 		transition-duration: 0.4s;
 		cursor: pointer;
 		border-radius: 4px;
-		width: 25%;
+		width: auto;
 	}
 	
 	#copyButton:hover {
